tests/neg/i11994.check
-- [E008] Not Found Error: tests/neg/i11994.scala:2:28 -----------------------------------------------------------------
2 |implicit def foo[T <: Tuple.meow]: Unit = ??? // error
  |                      ^^^^^^^^^^
  |                      type meow is not a member of object Tuple.
  |                      Extension methods were tried, but the search failed with:
  |
  |                          Cyclic reference involving method foo
  |                          
  |                          The error occurred while trying to complete the info of method foo
  |                            which required to complete the info of type T
  |                            which required to complete the info of method foo
  |                          
  |                           Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
-- [E008] Not Found Error: tests/neg/i11994.scala:3:18 -----------------------------------------------------------------
3 |given [T <: Tuple.meow]: Unit = ??? // error
  |            ^^^^^^^^^^
  |            type meow is not a member of object Tuple.
  |            Extension methods were tried, but the search failed with:
  |
  |                Cyclic reference involving method given_Unit
  |                
  |                The error occurred while trying to complete the info of given instance given_Unit
  |                  which required to complete the info of type T
  |                  which required to complete the info of given instance given_Unit
  |                
  |                 Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
